testsuite/bsc.typechecker/deriving/NoDerive.bs.bsc-out.expected
checking package dependencies
compiling NoDerive.bs
Error: "NoDerive.bs", line 6, column 0: (T0032)
  This expression requires the following context which could not be resolved:
    Prelude.Bits NoDerive.Test a__
  The context was implied by expressions at the following positions:
    "NoDerive.bs", line 9, column 22
  An instance for this context exists, but it depends on the following
  contexts for which there are no instances:
    Prelude.Add b__ c__ d__,
    Prelude.Bits Prelude.Integer c__,
    Prelude.Add 1 d__ a__,
    Prelude.Add e__ 1 d__,
    Prelude.Max c__ 1 d__
